@@ -53,6 +53,7 @@ aliasProperties.image=aliasProperties.gif
 
 logs.image=logs.gif
 
+find.image=find.gif
 
 Credits.file=credits.html
 
